Edited homepage photos

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ title: Home
 		</p>
     </div>
     <figure>
-        <img src="/assets/img/decorative/lab-photos-decorative/homepage-printmaking.jpg" alt="Decorative photo of several inked linoleum blocks from printmaking in SLab's makersace">
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-printmaking.jpg" alt="Decorative photo of several inked linoleum blocks from printmaking in SLab's makerspace">
         <figcaption>Printmaking in Scholars' Lab's makerspace.</figcaption>
     </figure>
 </section>
@@ -122,15 +122,23 @@ title: Home
             though the lab space itself is open
             <a href="/use-the-lab#slab-hours">whenever Shannon Library is open</a>.</p>
         <p><a href="/visit">>>> Using the Lab & Makerspace</a></p>
+            <figure>
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-usethelab-spotlit.png" alt="Decorative photo of a student writing on a monitor displaying other students' answers to 'What do you love about Shannon (Library building)?', where previous students have written 'Scholar Lab <3' and "makerspace'">
+        <figcaption>Friendly community space for digital & experimental scholarship.</figcaption>
+    		</figure>
     </div>
     <div>
         <h3>THE LAB'S MAKERSPACE</H3>
-        <p>Our <a href="/makerspace">Makerspace</a> is a place for tinkering and experimentation
-            with technologies like circuitry, 3D printing, and laser
-            cutting. Open to everyone, we specialize in applications and
+        <p>Our <a href="/makerspace">Makerspace</a> supports tinkering and experimentation
+            with electronics, fabric arts, 3D printing, laser cutting, and more. Open to everyone, we specialize in applications and
             research questions in the humanities and arts. The
             Makerspace staff provides consultation and instruction
-            <a href="https://www.library.virginia.edu/hours/">whenever the Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+            <a href="https://www.library.virginia.edu/hours/">during open hours</a>, or by appointment. Drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+            <p><a href="/makerspace">>>> Explore Our Makerspace</a></p>
+            <figure>
+        <img src="/assets/img/decorative/lab-photos-decorative/homepage-usethemakerspace.jpg" alt="Decorative photo of Scholars' Lab's makerspace full of makers">
+        <figcaption>Our makerspace is open to all.</figcaption>
+    		</figure>
     </div>
 </section>
 
