Styles individual project & people pages
* Styles individual project pages stats box & rest of page
* Individual people pages: move role into header, under name; move up in upwards-inset box

--- a/collections/_work/neatline.html
+++ b/collections/_work/neatline.html
@@ -49,7 +49,7 @@ slug: neatline
 title: Neatline
 thumb-img: neatline-thumb.png
 banner-img: neatline-banner.png
-research-category: Internal Projects and Community Service
+research-category: Internal Projects & Community Service
 start-year: 2010
 end-year: 2022
 ---
