--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -9,7 +9,7 @@ title: "Zine Bakery @ Scholars' Lab"
 link: https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z
 thumb-img: zinebakery-thumb.png
 banner-img: zinebakery-banner.png
-research-category: Internal Projects and Community Service
+research-category: Internal Projects & Community Service
 start-year: 2018
 end-year: current
 ---
