Updates 404 page text/style

--- a/404.html
+++ b/404.html
@@ -1,36 +1,39 @@
 ---
 layout: page
-title: We Can’t Find It!
+title: "You've found a... unicorn?"
 nav: false
 permalink: 404.html
 ---
 
-If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu!
+<p>You've found a page that doesn't exist on our site. If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu! (Sometimes pages and posts still exist but are at new addresses, or we can find the content for you in our archives.)</p>
 
-<h2>Learn</h2>
-We maintain an <a href="/about">FAQ page</a> covering common questions about the Scholars' Lab, and our <a href="/work">work page</a> shares information on various projects and other chunks of work we've done.
+<p class="center-align"><img src="/assets/img/decorative/abstract-decorative/404-brandon-walsh-unicorn.jpeg" alt="Photo of a whiteboard drawing that is an ambiguous four-footed creation with a horn, distantly related to a unicorn?"></p>
 
-<h2>Scholars' Lab Newsletter</h2>
-<div class="mc-field-group">
-<label for="mce-EMAIL">Email Address </label>
-<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
-					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    </div>
-					</form>
-					</div>
-					<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-					<!--End mc_embed_signup-->
-					</div> <!-- end signup wrapper -->
-				</div> <!-- end newsletter -->
-			</div> <!-- end contact content -->
+<h2>Help improve our site</h2>
+<p>Found a bug, a project missing a collaborator's name, or have a feature or content request for ScholarsLab.org? Please <a href="mailto:scholarslab@virginia.edu?subject=FromSLabSite404Page">email us</a> at ScholarsLab@Virginia.edu so we can follow up.</p>
 
-<h2>Improve</h2>
-Found a bug, a project missing a collaborator's name, or have a feature or content request for ScholarsLab.org? Please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu so we can follow up.
+<p>If you're comfortable with GitHub, you can instead <a href="https://github.com/scholarslab/scholarslab.org/issues/new">add an issue</a> to this website's repo if you think a link or other site feature is broken.</p>
 
-If you're comfortable with GitHub, you can instead <a href="https://github.com/scholarslab/scholarslab.org/issues/new">add an issue</a> to this website's repo if you think a link or other site feature is broken.
+<div>
+	<h2>Scholars' Lab Newsletter</h2>
+	<div class="mc-field-group">
+		<label for="mce-EMAIL">Email Address </label>
+		<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+			<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			<div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true">
+			</div>
+			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+			</div>
+		</div>
+	</form> <!-- is this needed for embed or anti-spam? there's no opening <form> in this 404.html file -->
+</div><!-- ends newsletter div -->
+
+<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+</script>
+<!--End mc_embed_signup-->			
+
+</div> <!-- end contact content -->
