Work & events slug changes...
* "Our Projects" page keeps /work URL (and redirects from /our-projects)
* Events Archive and /events-archive both use plural "events" to match Events and /events
* Config nav links adjusted

--- a/pages/events/events-archive.html
+++ b/pages/events/events-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Event Archive
-permalink: /event-archive/
+title: Events Archive
+permalink: /events-archive/
 nav: true
 ---
 <header><hgroup>
