--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -45,7 +45,7 @@ redirect_from:
 {% endfor %} <!-- end event -->
 
 <h2>Recent events</h2>
-<p>Any events from this academic year that have already happened. Events from before this academic year can be found in our (<a href="/event-archive">past event archive</a>.</p>
+<p>Any events from this academic year that have already happened. Events from before this academic year can be found in our (<a href="/events-archive">past event archive</a>).</p>
 
 <ul class="page-previous_posts">
 	{% for event in events %}
