--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: Our Projects
-permalink: /our-projects/
+permalink: /work/
 nav: true
 redirect_from:
   - /research
-  - /work
+  - /our-projects
 ---
 
 <!-- May eventually order into sections, or otherwise visually indicate what projects are student, faculty, internal; I believe _work already uses 3-4 categories that would allow this. -->
