Styles staff photo sections on makerspace, code-design, spatial-tech pages

--- a/pages/consult/code-design/code-design.html
+++ b/pages/consult/code-design/code-design.html
@@ -40,7 +40,7 @@ redirect_from:
 
 		</ul>
 	</section>
-	<section id="staff">
+	<section id="rd-staff">
 		<h2>Get In Touch!</h2>
 		<ul>
 			<!-- use Liquid here: -->
