--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -201,32 +201,34 @@ order: 3
 			<li><span>Hans Yang:</span> 3D printing</li>
 		</ul>
 		
+		<span class="makerspace-picture-staff">
  		<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
 		<ul>
 			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/ammon-shepherd.jpg" alt="Ammon Shepherd">
-				<span><a href="{{ site.baseurl }}/people/ammon-shepherd">Ammon Shepherd:</a></span> 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling</div>
+				<img src="{{ site.baseurl }}/assets/img/people/ammon-shepherd.jpg" alt="Ammon Shepherd"><br>
+				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/ammon-shepherd">Ammon Shepherd</a></span>: 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling
 			</li>
 		</ul>
  		<h3>Scholars&rsquo; Lab Staff Technologists</h3>
 		<ul>
 			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller">
-				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a>: 3D Printing, Photogrammetry, Digital Humanities</div>
+				<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller"><br>
+				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a></span>: 3D Printing, Photogrammetry, Digital Humanities
 			</li>
 			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin">
-				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a>: 3D Printing, Programming, Digital Humanities</div>
+				<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin"><br>
+				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a></span>: 3D Printing, Programming, Digital Humanities
 			</li>
 			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs">
-				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a>: 3D Printing, Electronics, Programming, Digital Humanities</div>
+				<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs"><br>
+				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a></span>: 3D Printing, Electronics, Programming, Digital Humanities
 			</li>
 			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti">
-				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a>: Digital Humanities, resin casting</div>
+				<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti"><br>
+				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a></span>: Digital Humanities, resin casting</div>
 			</li>
 		</ul>
+		</span>
 </div>
 
 </div><!-- ends .makerspace-main-content -->
