Adjusts hours and location content order.

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -16,27 +16,23 @@ order: 3
 <div class="makerspace-main-content">
 
 <div class="makerspace-location-hours">
-<h2>Location + Hours</h2>
-	<div class="banner">
-	<h3>Map</h3>
-		<p>The Scholars' Lab Makerspace is on the 3rd floor of Edgar Shannon Library.</p>
-		<p><img src="/assets/img/makerspace/3rd-floor.png" alt="The Makerspace is located on the 3rd floor, East Wing, in the South end of the wing."/></p>
-	</div>
-</div>
-<div>
-    <h3>Open Hours + Access</h3>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script>
-    <div id="s-lc-whw2093"></div>
-    <script>
+	<h2>Hours + Location</h2>
+	<h3>Open Hours + Access</h3>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script>
+	<div id="s-lc-whw2093"></div>
+	<script>
 		$(function () {
 			var week2093 = new $.LibCalWeeklyGrid($("#s-lc-whw2093"), {
 				iid: 863,
-          		lid: 2093,
-          		systemTime: false,
-        	})
-      	})
-    </script>
+				lid: 2093,
+				systemTime: false,
+			})
+		})
+	</script>
+	<h3>Map</h3>
+	<p>The Scholars' Lab Makerspace is on the 3rd floor of Edgar Shannon Library.</p>
+	<p><img src="/assets/img/makerspace/3rd-floor.png" alt="The Makerspace is located on the 3rd floor, East Wing, in the South end of the wing."/></p>
     <p>The Makerspace staff provides consultations and instruction for all your electronics, crafting, textiles, laser cutting, and 3D printing projects <a href="https://www.library.virginia.edu/hours/">whenever the Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 	<p>Or schedule a consultation with Ammon, manager of our Makerspace.</p>
 	<script>
@@ -68,7 +64,7 @@ order: 3
 		<h3>Using the Makerspace</h3>
 		<p>The Makerspace is open to all UVA students, staff and faculty, as well as the general public. We hope you will find the equipment, resources, and support to help you MAKE anything (within reason) you want to make.</p>
 		<p>You can stop in any time during our open hours, or contact us at <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to schedule an appointment with a Makerspace Technologist or Scholars&rsquo; Lab staff to discuss your project.</p>
-		<h3>Equipment</h3>		
+		<h3>Equipment</h3>
 		<p>All equipment can be reserved for use in the Makerspace. Use the <button id="eq_0" href="#">Book Equipment</button>
         	<script src="https://cal.lib.virginia.edu/js/widget.min.js"></script>
 			<script>
@@ -88,7 +84,7 @@ order: 3
         All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don't see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
 		<p>Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</p>
 		<h3>Faculty Consultations + Course Integrations</h3>
-				<p>Our Makerspace is an active participant in academic research. We support scholars' independent and collaborative work to explore, understand, and report on emerging technologies, methodologies, and pedagogies in a variety of disciplines. We love working with faculty to support class projects! Send your requests and ideas to our Makerspace Manager <a href="ammon@virginia.edu">Ammon Shepherd</a>.</p>	
+				<p>Our Makerspace is an active participant in academic research. We support scholars' independent and collaborative work to explore, understand, and report on emerging technologies, methodologies, and pedagogies in a variety of disciplines. We love working with faculty to support class projects! Send your requests and ideas to our Makerspace Manager <a href="ammon@virginia.edu">Ammon Shepherd</a>.</p>
 </div>
 
 <div>
@@ -171,11 +167,11 @@ order: 3
 			<li><a href="https://ammonshepherd.github.io/arduino-tuts/" target="_blank">Arduino Tutorials</a></li>
 			<li><a href="https://ammonshepherd.github.io/git-for-beginners/" target="_blank" >Git for beginners</a></li>
 			<li><a href="https://ammonshepherd.github.io/make-a-website/" target="_blank" >Make a simple website</a></li>
-			</ul>			
+			</ul>
 		<h3 id="workshop-links">Workshop-teaching resources</h3>
 			<ul>
 			<li><a href="/makerspace/workshops/arduino/">Arduino Workshop - Basics of Electricity and Circuits</a></li>
-			</ul>			
+			</ul>
 </div>
 
 <div class="makerspace__people">
@@ -200,7 +196,7 @@ order: 3
 			<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing</li>
 			<li><span>Hans Yang:</span> 3D printing</li>
 		</ul>
-		
+
 		<span class="makerspace-picture-staff">
  		<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
 		<ul>
