--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -39,7 +39,7 @@ redirect_from:
 	<h2>Other Scholarly Activities</h2>
 	<div class="collaborations">
 	<!-- Capture & markdownify code below allows us to manage the file as markdown (easier to add to list), but display within this HTML page as HTML.-->
-	<h3>Places we've collaborated at the University of Virginia</h3>
+	<h3>Our collaborators at UVA</h3>
 		<!-- See /_includes/_content-includes for the editable file containing the list of places we've worked on campus-->
 	{% capture uva-areas %}{% include _content-includes/uva-areas.md %}{% endcapture %}
 	{{ uva-areas | markdownify }}
