Fixed layout map...
* changed purple to green for more contrast; changed text legend to say green not violet

--- a/pages/visit/use-the-lab.html
+++ b/pages/visit/use-the-lab.html
@@ -40,7 +40,7 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 <img src=/assets/img/space-maps/CroppedForWebsite_SLabMap.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="slab-map">
 
 <ul>
-<li>Violet: public space</li>
+<li>Green: public space</li>
 <li>Yellow: mediated space (see hours, below)</li>
 <li>Red: private space (or by approved appointment/office hours/event)</li>
 </ul>
