Adds RG to code+design page; links homepage PM strengths there

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ title: Home
         <ul>
             <li><a href="/critical-DH">the critical digital humanities</a></li>
             <li><a href="/code-design">code & design</a></li>
-            <li><a href="/people/ronda-grizzle">collaborative project design & management</a></li>
+            <li><a href="/code-design">collaborative project design & management</a></li>
             <li><a href="/dh-pedagogy">digital pedagogy</a></li>
             <li><a href="/spatial-technologies">GIS/mapping & analysis</a></li>
             <li><a href="/spatial-technologies">cultural heritage informatics</a></li>
