--- a/pages/consult/code-design/code-design.html
+++ b/pages/consult/code-design/code-design.html
@@ -45,7 +45,7 @@ redirect_from:
 		<ul>
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
-			{% if person.title == 'Jeremy Boggs' or person.title == 'Shane Lin' %}
+			{% if person.title == 'Jeremy Boggs' or person.title == 'Shane Lin' or person.title == 'Ronda Grizzle' %}
 			<li>
 				<div class="rd-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.title }}"></div>
 				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.title }}</a></div> <!-- link to their page -->
