Adds bylines to captions of 6/8 homepage photos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ title: Home
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-about-us.jpeg" alt="Decorative photo of Scholars' Lab staff and students scanning a cultural heritage artifact">
         <figcaption>
-		3D scanning cultural heritage artifacts.
+		3D scanning cultural heritage artifacts. <span class="photo-byline">(Photo: Dan Addison, University Communications)</span>
         </figcaption>
     </figure>
 </section>
@@ -124,7 +124,7 @@ title: Home
         <p><a href="/visit">>>> Using the Lab & Makerspace</a></p>
             <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-usethelab-spotlit.png" alt="Decorative photo of a student writing on a monitor displaying other students' answers to 'What do you love about Shannon (Library building)?', where previous students have written 'Scholar Lab <3' and "makerspace'">
-        <figcaption>Friendly community space for digital & experimental scholarship.</figcaption>
+        <figcaption>Friendly community space for digital & experimental scholarship. <span class="photo-byline">(Photo: Photo: Emily Faith Morgan, UVA Today)</span></figcaption>
     		</figure>
     </div>
     <div>
@@ -150,7 +150,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-criticaldh.jpg" alt="Decorative photo of Scholars' Lab fellows working with staff outdoors on a location-based augmented reality research project">
-        <figcaption>Using augmented reality to contextualize race and historical place.</figcaption>
+        <figcaption>Using augmented reality to contextualize race and historical place. <span class="photo-byline">Photo: CC BY-NC Shane Lin.</span></figcaption>
     </figure>
 </section>
 
@@ -167,7 +167,7 @@ title: Home
     </div>
     <figure>
                 <img src="/assets/img/decorative/lab-photos-decorative/homepage-code-and-design.png" alt="Decorative screenshot of Scholars' Lab fellows James Ascher and Sarah Berkowitz's digital textual research project completed with the lab">
-        <figcaption>Exploring literary texts through code and visualization.</figcaption>
+        <figcaption>Exploring literary texts through code and visualization. <span class="photo-byline">Image: James Ascher.</span></figcaption>
     </figure>
 </section>
 <section id="spatial-technologies" class="feature">
@@ -184,7 +184,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-spatialtechnologies.jpg" alt="Decorative photo of Scholars' Lab staff working with students outdoors and in museums capturing cutural heritage data">
-        <figcaption>Investigating & preserving the past via museums, archives, and fieldwork</figcaption>
+        <figcaption>Investigating & preserving the past via museums, archives, and fieldwork. <span class="photo-byline">Photos: Will Rourk.</span></figcaption>
         </img>
     </figure>
 </section>
@@ -202,7 +202,7 @@ title: Home
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-opportunities.jpg" alt="Decorative photo of Scholars' Lab fellows posing in the library">
-        <figcaption>Collaborative research fellowships for the next generation of digital scholars.</figcaption>
+        <figcaption>Collaborative research fellowships for the next generation of digital scholars. <span class="photo-byline">Photo: CC BY-NC Shane Lin.</span></figcaption>
         </img>
     </figure>
 </section>
