Initial work on homepage introduction/hero section.
Refs #1052

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Home
 ---
+<section id="introduction">
+    <h1>Experiment in Community</h1>
+    <p>We are the UVA Library's community lab for the practice of experimental scholarship in all fields, informed by digital humanities, spatial technologies, & cultural heritage thinking.</p>
+</section>
 
 <section id="updates" class="feature">
     <div id="upcoming-events">
