Styles 'see all' links. Closes #1043.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
 {% endif %}
 {% endfor %}
         </ul>
-        <p><a href="/events/">See all our events</a>.</p>
+        <a class="see-all" href="/events/">See all our events</a>
     </div>
     <div id="recent-posts">
         <h2>Recent Blog Posts</h2>
@@ -45,7 +45,7 @@ title: Home
             	{% endif %}
             {% endfor %}
         </ul>
-        <p><a href="/blog/">See all our blog posts</a>.</p>
+        <a class="see-all" href="/blog/">See all our blog posts</a>
     </div>
     <div id="recent-activity">
         <h2>Recent Activity</h2>
