Renames CSS for events+work stats boxes .stats-box...
Condenses in CSS stylesheet into one .stats-box area under main styling section, as I wanted to use the same styling for /digital-humanities and noticed we were repeating the CSS three times but it was all the same

--- a/pages/consult/digital-humanities/digital-humanities.html
+++ b/pages/consult/digital-humanities/digital-humanities.html
@@ -16,6 +16,10 @@ redirect_from:
 
 <p>All 11 Scholars' Lab staff have experience working in the digital humanities (DH); our Spatial Technologies and Makerspace programs regularly work with DH practitioners, as well as scholars from other departments all over UVA.</p>
 
+<div class="stats-box">
+<p>To get started, email <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> and we'll get you scheduled to meet with the right experts!</p>
+</div>
+
 <section id="dh-critical">
 <h2>Critical DH: Theory & Scholarly Field</h2>
 
