Changes to code-design + DH page...
DH page is pedagogy & critical DH
changed config for nav

--- a/pages/consult/digital-humanities/digital-humanities.html
+++ b/pages/consult/digital-humanities/digital-humanities.html
@@ -3,15 +3,13 @@ layout: page
 title: "Digital Humanities"
 permalink: /digital-humanities/
 nav: true
-redirect_from:
-  - /research-and-development
 ---
 
 <p>The Scholars' Lab offers longstanding expertise in the digital humanities (DH):</p>
 <ul>
 <li><strong><a href="/digital-humanities#dh-critical">Critical DH</a></strong> (DH theory + scholarly field)</li>
-<li><strong><a href="/digital-humanities#dh-projects">DH projects</a></strong> (project design + management, code+design, methods training)</li>
 <li><strong><a href="/digital-humanities#dh-pedagogy">DH pedagogy</a></strong> (pedagogical consultation + collaboration)</li>
+<li><strong><a href="/code-design">DH projects, code, and design</a></strong> (project design + management, code+design, methods training)</li>
 </ul>
 
 <p>All 11 Scholars' Lab staff have experience working in the digital humanities (DH); our Spatial Technologies and Makerspace programs regularly work with DH practitioners, as well as scholars from other departments all over UVA.</p>
@@ -42,54 +40,7 @@ redirect_from:
 <p>Our <a href="/blog">award-winning research blog</a> and active, influential academic social media presence are key to our ongoing Critical DH scholarship. We&#39;re a founding member of Centernet, the international alliance of digital humanities organizations, and one of the DH centers with the most dedicated DH staff in the world. Our staff are in-demand external DH speakers, hold current and past elected and appointed leadership roles with <a href="https://ach.org">our international digital humanities scholarly organization</a>, and serve as editors on peer-reviewed DH and DH-adjacent publications such as <a href="programminghistorian.org">The Programming Historian</a> and <a href="https://cuny.manifoldapp.org/journals/jitp">The Journal of Interactive Technology and Pedagogy</a>. We are sought out by deans, administrators, and faculty at an international array of universities for advice and consultation on creating and improving their DH centers, initiatives, and curricula. Our specialty in nurturing the next generation of DH scholars means we have an active network of SLab alumni who have gone on to found their own, SLab-influence DH nodes at places including Yale, CUNY, and Columbia University.</p>
 
 <p>Our Critical DH work takes forms including an external speaker series focused on identifying exciting early career digital humanists charting where DH will go next; offering themed reading recommendations and bibliographies; maintaining a DH reference collection (Digital Humanities Working Library), and publishing written DH methodological tutorials.</p>
-</section> <!-- end cirtical DH section -->
-
-<section id="dh-projects">
-<h2>DH Projects: Project Design + Management, Code + Design, Methods Training</h2>
-	<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. We have a broad familiarity with a diverse variety of technologies, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
-	<ul>
-	<li><strong>Background research and developing a bibliography of existing DH work relevant to your particular project or research interests</strong>. It's likely the research project you're developing already has peer in the DH world, similar either in topic, discipline, or technical features and approach. The Scholars' Lab can help you review existing work to establish how your own contribution fits into that. Similar to doing a literature review for your book or dissertation, but with digital projects.</li>
-	<li><strong>Project scoping and management</strong>. We can help you take your broader ideas and help develop them into a list of concrete, actionable tasks or deliverables that you can work on. If you’re not sure how complex your project will be, we can also help you scope it out.</li>
-	<li><strong>Evaluating tools and methods relevant to your work</strong>. We have experience with a range of programming languages, markup languages, content management systems, and libraries, and can provide recommendations based on your interests and level of experience.</li>
-	<li><strong>User experience and interface design</strong>. We have experience researching and designing project interfaces that engage critically with subject matter in a variety of disciplines.</li>
-	<li><strong>Data collection, cleaning, organization, management and preservation</strong>. Whether it's arranging a corpus of texts, structuring an archive of historical primary source materials, or acquiring social media data, we can help you work with your research and teaching data.</li>
-	<li><strong>Conference and publication proposals</strong>. Our team, and other staff at the Scholars' Lab, have decades of experience publishing or sharing DH research at conferences and in academic journals. If you're interested in submitting proposals based on your DH work, we'd be glad to help review those proposals and offer suggestions.</li>
-	</ul>
-	<p>Whether you're a student working on a digital humanities project for a class, or you're faculty wishing to learn more about using particular DH methods or tools in course or research, we can help you find appropriate resources for your work.</p>
-	</section>
-
-	<section id="example-work">
-		<h3>Example Work and Resources</h3>
-		<p>Our <a href="/work/">Work</a> page lists projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
-		<ul>
-			<li><a href="https://digitalcollecting.lib.virginia.edu">Take Back the Archive</a></li>
-			<li><a href="https://salem.lib.virginia.edu">Salem Witch Trials Documentary Archive</a></li>
-			<li><a href="https://jeffersons-notes.org">Notes on the State of Virginia</a></li>
-			<li><a href="https://connection.scholarslab.org/">Connection Established</a></li>
-		</ul>
-		<h3>Related resources at UVA</h3>
-		<ul>
-			<li><a href="https://guides.lib.virginia.edu/dh">Digital Humanities LibGuide</a></li>
-			<li><a href="https://dh.library.virginia.edu">DH@UVA Website</a></li>
-			<li><a href="https://datascience.virginia.edu/degrees/digital-humanities-certificate">Digital Humanities Graduate Certificate</a></li>
-		</ul>
-	</section> <!-- ends example work section -->
-<!-- Commenting out until have discussion about who/where; e.g. we could have a people grid at the bototm of the page, listing areas each person can help with, as /makerspace does with staff + the makerspace skills they can teach?
-	<section id="rd-staff">
-		<h2>Get In Touch!</h2>
-		<ul>
-			{% for person in site.people %}
-			{% if person.title == 'Jeremy Boggs' or person.title == 'Shane Lin' or person.title == 'Ronda Grizzle' %}
-			<li>
-				<div class="rd-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.title }}"></div>
-				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.title }}</a></div>
-				<div class="rd-person__position">{{ person.position }}</div>
-			</li>
-			{% endif %}
-			{% endfor %}
-		</ul> 
-<!-- end person list -->		
-</section> <!-- end DH Projects section -->
+</section> <!-- end critical DH section -->
 
 <section id="dh-pedagogy">
 <h2>DH Pedagogical Consultation & Collaboration</h2>
